Fixed rendering issue on small screen devices.

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -76,7 +76,7 @@ button {  width: auto; overflow: visible; }
 
 /** Base and Typography
 ------------------------------------------------------------*/
-body { background-color: #E6F6F2; color: #667672; font-family: "myriad-PRO-1", "myriad-pro-2", "Myriad Pro", Helvetica, Arial, sans-serif; }
+body { background-color: #E6F6F2; color: #667672; font-family: "myriad-PRO-1", "myriad-pro-2", "Myriad Pro", Helvetica, Arial, sans-serif; width: 100%; }
 button, input, textarea, select { color: #333333; font-family: "myriad-pro-1", "myriad-pro-2", "Myriad Pro", Helvetica, Arial, sans-serif; }
 a:hover, a:active { outline: none; }
 a, a:active, a:visited { color: #5B5B5B; }
@@ -92,7 +92,7 @@ p { margin-bottom: 25px; }
 .container { clear: both; margin: 0 auto; width: 896px; }
 .container:before, .container:after { content: "."; display: block; height: 0; visibility: hidden; }
 .container:after { clear: both; }
-#Container { background: #FAF8F1 url(../img/container.png) no-repeat 50% 100%; color: #4D6D42; }
+#Container { background: #FAF8F1 url(../img/container.png) no-repeat 50% 100%; color: #4D6D42; display: table; width: 100%; }
 #Header { background: #FFFFFF url(../img/header.png) repeat-x 0 100%; height: 408px; position: relative; }
 #Header .container { position: relative; }
 #Header h1 { clear: both; margin-bottom: 100px; padding-top: 110px; }
